tests/ui/eii/duplicate/dylib_default_duplicate.stderr
error: multiple implementations of `#[eii1]`
  --> $DIR/dylib_default_duplicate.rs:15:1
   |
LL | fn other(x: u64) {
   | ^^^^^^^^^^^^^^^^ first implemented here in crate `dylib_default_duplicate`
   |
  ::: $DIR/auxiliary/dylib_default.rs:5:1
   |
LL | fn decl1(x: u64) {}
   | ---------------- also implemented here in crate `dylib_default`
   |
   = help: an "externally implementable item" can only have a single implementation in the final artifact. When multiple implementations are found, also in different crates, they conflict

error: aborting due to 1 previous error

